button and label wrap bug fix

--- a/admin/css/c9-admin.css
+++ b/admin/css/c9-admin.css
@@ -293,7 +293,7 @@ body .dashicons :before {
 	font-family: dashicons;
 }
 
-body .components-button {
+.components-popover .components-toolbar .components-button {
 	white-space: nowrap;
 }
 
